# ReadingImagesWithQt

./: .gitignore  CMakeLists.txt  README.md
include/: ImageViewer.hpp  ImageViewerDefinitions.hpp
src/main/: ImageViewer.cpp  Main.cpp
